estrutura main finalizada

--- a/index.html
+++ b/index.html
@@ -158,6 +158,104 @@
                     </div>
                 </div>
             </div>
+
+            <div id="box-pergunts">
+                <h2>perguntas frequentes</h2>
+
+                <ul id="cont-pergunts">
+
+                    <li class="box-card">
+                        <button  class="card-pergunta">
+                            <span id="title"> <h3>O que é a Netflix ?</h3></span>
+                            <span id="icon">
+                                <i class="bi bi-plus-lg"></i>
+                            </span>
+                        </button>
+
+                        <div class="card-resposta" style="display: none;"
+                        style="display: none;">
+                             <span id="resp">
+                                    A Netflix é um serviço de streaming que oferece uma ampla variedade de séries, filmes e documentários premiados em milhares de aparelhos conectados à internet.
+                                    <br>
+                                    <br>
+                                    Você pode assistir a quantos filmes e séries quiser, quando e onde quiser – tudo por um preço mensal acessível. Aqui você sempre encontra novidades. A cada semana, adicionamos novas séries e filmes.
+                                </span> 
+                        </div>                        
+                    </li>
+
+                    <li class="box-card">
+                        <button  class="card-pergunta">
+                            <span id="title"> <h3>Quanto custa a Netflix ?</h3></span>
+                            <span id="icon">
+                                <i class="bi bi-plus-lg"></i>
+                            </span>
+                        </button>
+
+                        <div class="card-resposta" style="display: none;"
+                        style="display: none;">
+                             <span id="resp">
+                                Assista à Netflix no seu celular, tablet, Smart TV, notebook ou aparelho de streaming por uma taxa mensal única. Os planos variam de R$&nbsp;20,90 a R$&nbsp;59,90 por mês. Sem contrato nem taxas extras.
+                                 
+                            </span> 
+                        </div>                        
+                    </li>
+
+                    <li class="box-card">
+                        <button  class="card-pergunta">
+                            <span id="title"> <h3>Onde posso assistir ?</h3></span>
+                            <span id="icon">
+                                <i class="bi bi-plus-lg"></i>
+                            </span>
+                        </button>
+
+                        <div class="card-resposta" style="display: none;"
+                        style="display: none;">
+                             <span id="resp">
+                                Assista onde quiser, quando quiser. Acesse sua conta Netflix em netflix.com para assistir no computador ou em qualquer aparelho conectado à internet compatível com o aplicativo Netflix, como Smart TVs, smartphones, tablets, aparelhos de streaming e videogames.
+                                <br>
+                                <br>
+                                Você também pode baixar suas séries favoritas com o aplicativo Netflix para iOS ou Android. Use os downloads para levar a Netflix para onde quiser sem precisar de conexão com a internet. Leve a Netflix com você para qualquer lugar.
+                            </span> 
+                        </div>                        
+                    </li>
+
+                    <li class="box-card">
+                        <button  class="card-pergunta">
+                            <span id="title"> <h3> Como faço para cancelar ?</h3></span>
+                            <span id="icon">
+                                <i class="bi bi-plus-lg"></i>
+                            </span>
+                        </button>
+
+                        <div class="card-resposta" style="display: none;"
+                        style="display: none;">
+                             <span id="resp">
+                                A Netflix é flexível. Não há contratos nem compromissos. Você pode cancelar a sua conta na internet com apenas dois cliques. Não há taxa de cancelamento – você pode começar ou encerrar a sua assinatura a qualquer momento.
+                            </span> 
+                        </div>                        
+                    </li>
+
+                    <li class="box-card">
+                        <button  class="card-pergunta" style="display: none;">
+                            <span id="title"> <h3> O que eu posso assistir na Netflix ? </h3></span>
+                            <span id="icon">
+                                <i class="bi bi-plus-lg"></i>
+                            </span>
+                        </button>
+
+                        <div class="card-resposta" style="display: none;">
+                             <span id="resp">
+                                A Netflix tem um grande catálogo de filmes, documentários, séries, originais Netflix premiados e muito mais. Assista o quanto quiser, quando quiser.
+                            </span> 
+                        </div>                        
+                    </li>
+                </ul>
+            </div>
+
+            <div id="vamos">
+                <button>Vamos lá</button>
+                <p>Crie ou reinicie sua assinatura</p>
+            </div>
         </main>
     </div>
     
